# pysparseir

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  MANIFEST.in  MISSING_FEATURES.md  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
src/pylibsparseir/: __init__.py  abstract.py  adapter.py  augment.py  basis.py  basis_set.py  constants.py  core.py  dlr.py  kernel.py  poly.py  sampling.py  svd_enhanced.py  sve.py
src/sparse_ir/: augment.py  basis.py  sampling.py  sve.py
tests/: conftest.py  test_advanced_features.py  test_api_compatibility.py  test_augment.py  test_basis.py  test_basis_set.py  test_c_api_core.py  test_c_api_integration.py  test_c_api_sampling.py  test_comparison.py  test_comparison_with_sparse_ir.py  test_core.py  test_dlr.py  test_kernel.py  test_poly.py  test_sampling.py  test_sampling_advanced.py  test_sve.py  test_sve_advanced.py
tests/c_api/: core_tests.py  dlr_tests.py  integration_tests.py  sampling_tests.py
tutorials/: analytic_continuation_py.py  dlr_py.py  flex_py.py  sparse_sampling_demo_py.py
